dto modification, cors mapping, changed some return types